# src/app/services/models/authentication-response.ts
@@ -1,5 +1,8 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface AuthenticationResponse {
+  fullname?: string;
+  role?: 'SUPERADMIN' | 'PREPARER' | 'DISPATCHER' | 'DELIVERY_PERSON' | 'CRC';
   token?: string;
+  user_id?: number;
 }
